--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/jimmyl02/signInNowBackend#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.1.0",
     "eslint": "^6.3.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
